--- a/.github/workflows/build-push-update-values.yaml
+++ b/.github/workflows/build-push-update-values.yaml
@@ -14,8 +14,8 @@ permissions:
 env:
   APP_NAME: go-web
   NAMESPACE: go-web
-  ACR_NAME: ${{ secrets.ACR_NAME }}
-  IMAGE_REPO: ${{ secrets.ACR_NAME }}.azurecr.io/go-web
+  ACR_NAME: ${{ secrets.ACR_NAME }}                       # e.g. devrevinciacrDemo
+  IMAGE_REPO: ${{ secrets.ACR_NAME }}.azurecr.io/go-web   # devrevinciacrdemo.azurecr.io/go-web
 
 jobs:
   build_push_update:
@@ -29,6 +29,7 @@ jobs:
         with:
           go-version: '1.22'
 
+      # Optional: Azure login (kept for future OIDC-only flow)
       - name: Login to Azure (OIDC)
         uses: azure/login@v2
         with:
@@ -36,7 +37,8 @@ jobs:
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: ACR login
+      # Optional: ACR CLI login (not strictly required when using docker/login)
+      - name: ACR login (CLI)
         run: az acr login -n ${{ env.ACR_NAME }}
 
       - name: Set image tag vars
@@ -44,6 +46,14 @@ jobs:
         run: |
           echo "TAG=${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
           echo "IMAGE=${{ env.IMAGE_REPO }}:${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
+
+      # 🔐 Password-based push (temporary until RBAC is granted)
+      - name: Docker login to ACR (admin creds)
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.ACR_NAME }}.azurecr.io
+          username: ${{ secrets.REGISTRY_USERNAME }}       # e.g. devrevinciacrDemo
+          password: ${{ secrets.REGISTRY_PASSWORD }}       # from `az acr credential show`
 
       - name: Build and push image
         uses: docker/build-push-action@v6
@@ -72,7 +82,7 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add charts/go-web/values-acr.yaml
-          git commit -m "chore(ci): bump image tag to ${TAG}"
+          git commit -m "chore(ci): bump image tag to ${TAG}" || echo "No changes to commit"
           git push origin HEAD:main
         env:
           TAG: ${{ steps.vars.outputs.TAG }}
