--- a/.github/workflows/build-push-update-values.yaml
+++ b/.github/workflows/build-push-update-values.yaml
@@ -36,6 +36,7 @@ jobs:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          auth-type: federated
 
       # Optional: ACR CLI login (not strictly required when using docker/login)
       - name: ACR login (CLI)
