--- a/.github/workflows/build-push-update-values.yaml
+++ b/.github/workflows/build-push-update-values.yaml
@@ -52,9 +52,9 @@ jobs:
       - name: Docker login to ACR (admin creds)
         uses: docker/login-action@v3
         with:
-          registry: ${{ env.ACR_NAME }}.azurecr.io
           username: ${{ secrets.REGISTRY_USERNAME }}       # e.g. devrevinciacrDemo
-          password: ${{ secrets.REGISTRY_PASSWORD }}       # from `az acr credential show`
+          password: ${{ secrets.REGISTRY_PASSWORD }}    
+          registry: devrevinciacrDemo.azurecr.io          # from `az acr credential show`
 
       - name: Build and push image
         uses: docker/build-push-action@v6
