--- a/.github/workflows/build-push-update-values.yaml
+++ b/.github/workflows/build-push-update-values.yaml
@@ -82,8 +82,18 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git fetch origin main
+          git rebase orgin/main
           git add charts/go-web/values-acr.yaml
           git commit -m "chore(ci): bump image tag to ${TAG}" || echo "No changes to commit"
+          git push origin HEAD:main
+        env:
+          TAG: ${{ steps.vars.outputs.TAG }}
+
+
+
+
+          
           git push origin HEAD:main
         env:
           TAG: ${{ steps.vars.outputs.TAG }}
